# react-fastapi-webrtc

./: start.sh
client/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/ui/: page.tsx  progress-with-value.tsx
client/src/context/: io-client.tsx  socketio.tsx
client/src/hooks/: use-io-client.ts  use-io-subscribe.ts  use-rtc.ts  use-socket.ts
client/src/lib/: blob-encode-decode.ts  events-manager.ts  file-transfer.ts  rtc-manager.ts  utils.ts
client/src/pages/home/: index.tsx
client/src/pages/not-found/: index.tsx
client/src/pages/room/: index.tsx
client/src/storage/: indexed-db.ts
client/src/workers/: file-downloader.ts  file-sender.ts
deployment/: Dockerfile  compose.yml  nginx.conf
server/: .gitignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
server/core/sio/: events.py  sio_manager.py
server/core/sio/events/: webrtc.py
server/lib/: sio.py
